# sistema_grafico_INE5420

./: .gitignore  pyproject.toml
sistema_grafico/: Creating_New_Object.py  MainWindow.py  MainWindow2.py  __main__.py  controller.py  creating_new_object.ui  form.ui  mainwindow.ui  model.py  sistema_grafico.pyproject  view.py
sistema_grafico/sistema_grafico/: form.ui
